--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -2,7 +2,10 @@
 
 // For example:
 $red: #EE5F5B;
-$blue: #469AE0;
+$coral: #EE5F54;
+$blue: #1E5772;
+$blue-medium: #3183A8;
+$light-blue: #ABCAD4;
 $yellow: #FDB631;
 $orange: #E67E22;
 $green: #32B796;
