very very very basic layout for side by side collection and games  sidebars

--- a/app/views/shared/_sidebar.erb
+++ b/app/views/shared/_sidebar.erb
@@ -1,46 +1,70 @@
-<nav id="sidebar">
-  <div class="sidebar-header">
-      <h3>Bootstrap Sidebar</h3>
-  </div>
+<!-- <nav id="sidebar-collection">
+ <div class="sidebar-header">
+     <h3>Collection Sidebar</h3>
+ </div>
 
-  <ul class="list-unstyled components">
-    <p>Dummy Heading</p>
-    <li class="active">
-      <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Home</a>
-      <ul class="collapse list-unstyled" id="homeSubmenu">
-          <li>
-              <a href="#">Home 1</a>
-          </li>
-          <li>
-              <a href="#">Home 2</a>
-          </li>
-          <li>
-              <a href="#">Home 3</a>
-          </li>
-      </ul>
-    </li>
-    <li>
-        <a href="#">About</a>
-    </li>
-    <li>
-        <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Pages</a>
-        <ul class="collapse list-unstyled" id="pageSubmenu">
-            <li>
-                <a href="#">Page 1</a>
-            </li>
-            <li>
-                <a href="#">Page 2</a>
-            </li>
-            <li>
-                <a href="#">Page 3</a>
-            </li>
-        </ul>
-    </li>
-    <li>
-        <a href="#">Portfolio</a>
-    </li>
-    <li>
-        <a href="#">Contact</a>
-    </li>
-  </ul>
+ <ul class="list-unstyled components">
+     <li class="active">
+         <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
+             <i class="fas fa-home"></i>
+             Home
+         </a>
+     </li>
+     <li>
+         <a href="#">
+             <i class="fas fa-briefcase"></i>
+             About
+         </a>
+         <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
+             <i class="fas fa-copy"></i>
+             Pages
+         </a>
+     </li>
+ </ul>
+
 </nav>
+
+<nav id="sidebar-games">
+ <div class="sidebar-header">
+     <h3>Collection Sidebar</h3>
+ </div>
+
+ <ul class="list-unstyled components">
+     <li class="active">
+         <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
+             <i class="fas fa-home"></i>
+             Home
+         </a>
+     </li>
+     <li>
+         <a href="#">
+             <i class="fas fa-briefcase"></i>
+             About
+         </a>
+         <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
+             <i class="fas fa-copy"></i>
+             Pages
+         </a>
+     </li>
+ </ul>
+
+</nav>
+ -->
+
+<div class="container-fluid">
+  <div class="row">
+
+    <div class="col-sm-3" id="sidebar-collection">
+      <nav class="sidebar-header">
+          <h3>MY COLLECTIONS</h3>
+      </nav>
+    </div>
+
+    <div class="col-sm-3" id="sidebar-games">
+      <nav class="sidebar-header">
+          <h3>MY GAMES</h3>
+      </nav>
+    </div>
+
+  </div>
+</div>
