--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -10,6 +10,16 @@
   justify-content: space-between;
 }
 
+// .navbar-home {
+//   background: white;
+//   box-shadow: none;
+//   .navbar-wagon-link {
+//     color: white;
+//     font-weight: bold;
+//   }
+// }
+
+
 /* Logo */
 .navbar-wagon-brand img {
   height: 50px;
@@ -74,15 +84,4 @@
   transform: rotate(45deg);
   border-left: 1px solid #E6E6E6;
   border-top: 1px solid #E6E6E6;
-}
-
-.navbar-home {
-  position: absolute;
-  width: 100%;
-  background: transparent;
-  box-shadow: none;
-  .navbar-wagon-link {
-    color: white;
-    font-weight: bold;
-  }
 }
