--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,2 +1,15 @@
 <h1>Games#show</h1>
 <p>Find me in app/views/games/show.html.erb</p>
+
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12 col-sm-4">
+      <p>Echiquier</p>
+      <p>integrer les pièces</p>
+    </div>
+    <div class="col-xs-12 col-sm-4">
+      <p>Notations game</p>
+      <p>integrer les plies</p>
+    </div>
+  </div>
+</div>
