--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -1,5 +1,5 @@
 // Import Google fonts
-@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,600,700|Roboto+Mono:300,400,700"");
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,600,700|Roboto+Mono:300,400,700");
 
 // Define fonts for body and headers
 $body-font: "Open Sans", "Helvetica", "sans-serif";
