--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
     <!-- Add these line for detecting device width -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>ChessRise</title>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700|Roboto+Mono:300,400,700" rel="stylesheet">
+<!--     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700|Roboto+Mono:300,400,700" rel="stylesheet"> -->
 
     <%= csrf_meta_tags %>
     <%= action_cable_meta_tag %>
