--- a/app/views/collections/index.html.erb
+++ b/app/views/collections/index.html.erb
@@ -1,2 +1,5 @@
 <h1>Collections#index</h1>
 <p>Find me in app/views/collections/index.html.erb</p>
+
+<p class="collection-card">My favorite list</p>
+<p class="collection-card">All games</p>
