--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,67 +1,62 @@
 /* Main navbar */
-.navbar-wagon {
+.navbar {
   box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
   background: white;
   transition: all 0.3s ease;
-  height: 70px;
+  height: 60px;
   padding: 0px 30px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+  position: relative;
 }
 
-// .navbar-home {
-//   background: white;
-//   box-shadow: none;
-//   .navbar-wagon-link {
-//     color: white;
-//     font-weight: bold;
-//   }
-// }
-
-
 /* Logo */
-.navbar-wagon-brand img {
+.navbar-brand img {
   height: 50px;
 }
 
 /* User Avatar */
-.navbar-wagon .avatar {
+.navbar .avatar {
   height: 35px;
   width: 35px;
   border-radius: 50%;
 }
 
-/* Right section */
-.navbar-wagon-right {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+.navbar-left {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+}
+
+.navbar-right {
+  position: absolute;
+  top: 10px;
+  right: 10px;
 }
 
 /* Basic navbar item */
-.navbar-wagon-item {
+.navbar-item {
   cursor: pointer;
-  padding: 0 20px;
+  padding: 0 7px;
 }
 
 /* Navbar link */
-.navbar-wagon-link {
+.navbar-link {
   color: #616668;
   font-size: 14px;
 }
-.navbar-wagon-link:hover {
+.navbar-link:hover {
   color: #da552f;
   text-decoration: none;
+  font-weight: bold;
+
 }
 
 /* Dropdown menu */
-.navbar-wagon-dropdown-menu {
+.navbar-dropdown-menu {
   margin-top: 15px;
   box-shadow: 1px 1px 4px #E6E6E6;
   border-color: #E6E6E6;
 }
-.navbar-wagon-dropdown-menu li > a {
+.navbar-dropdown-menu li > a {
   transition: color 0.3s ease;
   font-weight: lighter !important;
   color: #999999 !important;
@@ -69,11 +64,11 @@
   line-height: 22px !important;
   padding: 10px 20px;
 }
-.navbar-wagon-dropdown-menu li > a:hover {
+.navbar-dropdown-menu li > a:hover {
   background: transparent !important;
-  color: black !important;
+  color: #da552f !important;
 }
-.navbar-wagon-dropdown-menu:before {
+.navbar-dropdown-menu:before {
   content: ' ';
   height: 10px;
   width: 10px;
