sign-up form centering

--- a/app/assets/stylesheets/components/_game-cards.scss
+++ b/app/assets/stylesheets/components/_game-cards.scss
@@ -5,7 +5,7 @@
   margin: 10px;
   background-size: cover !important;
   background-position: center;
-  color: light-gray;
+  color: LightGray;
   position: relative;
   border: 1px solid #ABCAD4;
 }
