card games moves and homepage

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -2,7 +2,7 @@
   <!-- NAVBAR CONTENT -->
   <!-- Logo -->
   <a href="/" class="navbar-wagon-brand">
-    <img src="images/logo.png" alt="logo">
+    <img src="<%= image_path('chess-rise-logo.png') %>" alt="logo">
   </a>
 
   <!-- Right Navigation -->
