--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,15 +1,52 @@
 <div class="container">
-  <div class="row">
-    <div class="col-xs-12 col-sm-4">
-      <p>Echiquier</p>
-      <p>integrer les pièces</p>
-    </div>
-    <div class="col-xs-12 col-sm-4">
-      <p>Notations game</p>
-      <p>integrer les plies</p>
+  <div class="chess-box">
+    <div class="row">
+
+      <div class="col-sm-6">
+        <div class="chess-board">
+          <img src="<%= image_path('empty-chessboard.png') %>" alt="">
+        </div>
+      </div>
+
+      <div class="col-sm-6">
+        <div class="chess-notations">
+          <div class="chess-headers">
+
+            <div class="players">
+              <div class="white-player card-notations-header">
+                <p><%= @white_player.fullname %> (<%= @white_player.title %>) <%= link_to edit_player_path(@white_player) do %>
+                  <i class="fas fa-pencil-alt"></i>
+                <% end %></p>
+              </div>
+              <div class="black-player card-notations-header">
+                <p><%= @black_player.fullname %> (<%= @black_player.title %>) <%= link_to edit_player_path(@black_player) do %>
+                  <i class="fas fa-pencil-alt"></i>
+                <% end %></p>
+              </div>
+            </div>
+
+            <div class="description collection-card">
+              <p> <%= @game.event %> | <%= @game.site %> | <%= @game.date %>  <i class="fas fa-pencil-alt"></i>
+              </p>
+            </div>
+          </div>
+          <div class="chess-moves">
+            <p>1.e4 c5 2.Nf3 e6 3.d4 cxd4 4.Nxd4 Nc6 5.Nc3 a6 6.Be2 Qc7 7.O-O Nf6 8.Be3 Bb4
+            9.Na4 O-O 10.c4 Bd6 11.g3 Nxe4 12.Bf3 f5 13.Bxe4 fxe4 14.c5 Be7
+            15.Qg4 Ne5 16.Qxe4 d5 17.cxd6 Bxd6 18.Rac1 Qa5 19.Nb3 +/- {D}
+            19...Qb4
+            </p>
+          </div>
+
+        </div>
+      </div>
+
     </div>
   </div>
 </div>
+
+
+
 
 <div class="container">
 
