--- a/app/assets/stylesheets/layouts/_sidebar_games.scss
+++ b/app/assets/stylesheets/layouts/_sidebar_games.scss
@@ -3,4 +3,9 @@
     background: $brand-info;
     color: #fff;
     transition: all 0.3s;
+    padding: 0;
+}
+
+.red {
+  background: red !important;
 }
