--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,12 +3,31 @@
 <div class="wrapper">
 
     <!-- Sidebar -->
-  <%= render 'shared/sidebar' %>
+<!--   <%= render 'shared/sidebar' %> -->
 
-    <!-- Page Content -->
-    <div id="content">
-        <!-- We'll fill this with dummy content -->
+  <div class="container-fluid">
+    <div class="row">
+
+      <div class="col-sm-2" id="sidebar-collection">
+        <nav class="sidebar-header">
+            <h3>MY COLLECTIONS</h3>
+        </nav>
+      </div>
+
+      <div class="col-sm-2" id="sidebar-games">
+        <nav class="sidebar-header">
+            <h3>MY GAMES</h3>
+        </nav>
+      </div>
+
     </div>
+  </div>
+
+
+  <!-- Page Content -->
+  <div id="content">
+      <!-- We'll fill this with dummy content -->
+  </div>
 
 </div>
 
