--- a/app/views/collections/index.html.erb
+++ b/app/views/collections/index.html.erb
@@ -9,15 +9,10 @@
         <%= render "shared/sidebar_game", games: @games %>
       </div>
 
+      <%= render "shared/chess_box" %>
+
     </div>
   </div>
 
-
-  <!-- Page Content -->
-  <div id="content">
-      <!-- We'll fill this with dummy content -->
-  </div>
-
 </div>
-
 
