--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<%# content_for(:navbar_class, "navbar-home") %>
+<%= content_for(:navbar_class, "navbar-home") %>
 
 <div class="banner" style="background-image: linear-gradient(-225deg,rgba(0,101,168,0.3) 0%, rgba(0,36,61,0.4) 50%), url(<%= image_path('JC_is_the_boss.jpg') %>);">
   <div class="banner-content">
@@ -49,9 +49,8 @@
     <div class="testimonies-content-description">
       <h1><strong>A modern tool for modern players</strong></h1>
       <p>See your games in a beautiful format on any device. Elegant and easy on the eyes, now you can focus on your Game.
-         </p>      
+         </p>
     </div>
   </div>
 </div>
-
 
