--- a/app/assets/stylesheets/components/_chess-box.scss
+++ b/app/assets/stylesheets/components/_chess-box.scss
@@ -3,7 +3,7 @@
   // align-items: center;
   justify-content: space-between;
   font-size: 18px;
-  width: 540px;
+  // width: 540px;
 }
 .card-notations-header {
   background: #1E5772;
@@ -12,7 +12,7 @@
   font-size: 18px;
   font-weight: bolder;
   box-shadow: 1px 1px #D6E0E5;
-  width: 250px;
+  // width: 250px;
   margin-bottom: 0;
 }
 i {
@@ -31,8 +31,10 @@ i:hover {
 }
 .chess-notations {
   background-color : white;
-  min-height: 512px;
+  // min-height: 512px;
 }
 .chess-box {
-  margin-top: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
 }
