added chess.js lib

--- a/app/assets/stylesheets/components/_chess-box.scss
+++ b/app/assets/stylesheets/components/_chess-box.scss
@@ -38,3 +38,9 @@ i:hover {
   align-items: center;
   justify-content: space-around;
 }
+
+#move:hover {
+  background-color: grey;
+  font-size: bold;
+  cursor: pointer;
+}
