--- a/app/views/shared/_chess_box.html.erb
+++ b/app/views/shared/_chess_box.html.erb
@@ -2,6 +2,11 @@
 
     <div class="col-sm-4">
       <div id="chessgame"></div>
+      <div class="btn btn-primary" id="board-toggle">Toggle</div>
+      <div class="btn btn-primary" id="pgn-reset">Reset</div>
+      <div class="btn btn-primary" id="e4">e4</div>
+      <div class="btn btn-primary" id="previous-move"> < </div>
+      <div class="btn btn-primary" id="next-move"> > </div>
     </div>
 
     <div class="col-sm-4">
@@ -40,11 +45,12 @@
           </div>
         </div>
         <div class="chess-moves">
-          <p>1.e4 c5 2.Nf3 e6 3.d4 cxd4 4.Nxd4 Nc6 5.Nc3 a6 6.Be2 Qc7 7.O-O Nf6 8.Be3 Bb4
-          9.Na4 O-O 10.c4 Bd6 11.g3 Nxe4 12.Bf3 f5 13.Bxe4 fxe4 14.c5 Be7
-          15.Qg4 Ne5 16.Qxe4 d5 17.cxd6 Bxd6 18.Rac1 Qa5 19.Nb3 +/- {D}
-          19...Qb4
-          </p>
+          <% @game.plies.each do |ply| %>
+            <% if ply.status == "main" %>
+              <span> <%= ply.display_move_number %></span>
+              <span id="move"> <%= ply.move  %></span>
+            <% end %>
+          <% end %>
         </div>
       </div>
 
