--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,7 +4,7 @@
   <div class="banner-content">
     <h1>ChessRise</h1>
     <p><span id="banner-typed-text"></span></p>
-    <%= link_to "Jump in", games_path, class: "btn btn-primary" %>
+    <%= link_to "Jump in", collections_path, class: "btn btn-primary" %>
   </div>
 </div>
 
