--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -4,11 +4,11 @@
   <!-- Left Navigation -->
   <div class="navbar-left hidden-xs hidden-sm">
     <a href="/" class="navbar-brand">
-      <img src="<%= image_path('chess-rise-logo.png') %>" alt="logo">
+      <img src="<%= image_path('App icon detouré.png') %>" alt="logo">
     </a>
-    <a href=""><i class="far fa-window-restore navbar-item navbar-link"></i></a>
+   <!--  <a href=""><i class="far fa-window-restore navbar-item navbar-link"></i></a>
     <a href=""><i class="fas fa-trash-alt navbar-item navbar-link"></i></a>
-    <a href=""><i class="fas fa-plus-square navbar-item navbar-link"></i></a>
+    <a href=""><i class="fas fa-plus-square navbar-item navbar-link"></i></a> -->
   </div>
 
 <!-- Right Navigation -->
