--- a/app/assets/stylesheets/components/_chess-box.scss
+++ b/app/assets/stylesheets/components/_chess-box.scss
@@ -1,3 +1,11 @@
+.touches {
+  height: 12px;
+  width: 12px;
+  padding: 0;
+  margin: 0;
+}
+
+
 .players {
   display: inline-flex;
   // align-items: center;
