--- a/app/views/shared/_chess_box.html.erb
+++ b/app/views/shared/_chess_box.html.erb
@@ -2,11 +2,13 @@
 
     <div class="col-sm-4">
       <div id="chessgame"></div>
-      <div class="btn btn-primary" id="board-toggle">Toggle</div>
-      <div class="btn btn-primary" id="pgn-reset">Reset</div>
-      <div class="btn btn-primary" id="e4">e4</div>
-      <div class="btn btn-primary" id="previous-move"> < </div>
-      <div class="btn btn-primary" id="next-move"> > </div>
+      <div class="btn btn-primary" id="board-toggle"><img class="touches" src="<%= image_path('flip.png') %>" alt="toogle"></div>
+      <div class="btn btn-primary" id="pgn-reset"><img class="touches" src="<%= image_path('rotating.png') %>" alt="play_game"></div>
+      <div class="btn btn-primary" id="play"><img class="touches" src="<%= image_path('play.png') %>" alt="play_game"></div>
+      <div class="btn btn-primary" id="first-move"><img class="touches" src="<%= image_path('first_move.png') %>" alt="play_game"></div>
+      <div class="btn btn-primary" id="previous-move"><img class="touches" src="<%= image_path('backward-arrow.png') %>" alt="play_game"></div>
+      <div class="btn btn-primary" id="next-move"><img class="touches" src="<%= image_path('arrow-point-to-right.png') %>" alt="play_game"></div>
+      <div class="btn btn-primary" id="last-move"><img class="touches" src="<%= image_path('fast-forward-button.png') %>" alt="play_game"></div>
     </div>
 
     <div class="col-sm-4">
