when clicking on 1 game card, the chessbox displays the right info concerning the game

--- a/app/views/collections/index.html.erb
+++ b/app/views/collections/index.html.erb
@@ -9,8 +9,7 @@
         <%= render "shared/sidebar_game", games: @games %>
       </div>
 
-      <%= render "shared/chess_box" %>
-
+      <%= render "shared/chess_box", game: @game %>
     </div>
   </div>
 
