--- a/app/views/shared/_chess_box.html.erb
+++ b/app/views/shared/_chess_box.html.erb
@@ -5,10 +5,10 @@
       <div class="btn btn-primary" id="board-toggle"><img class="touches" src="<%= image_path('flip.png') %>" alt="toogle"></div>
       <div class="btn btn-primary" id="pgn-reset"><img class="touches" src="<%= image_path('rotating.png') %>" alt="play_game"></div>
       <div class="btn btn-primary" id="play"><img class="touches" src="<%= image_path('play.png') %>" alt="play_game"></div>
-      <div class="btn btn-primary" id="first-move"><img class="touches" src="<%= image_path('first_move.png') %>" alt="play_game"></div>
+<!--       <div class="btn btn-primary" id="first-move"><img class="touches" src="<%= image_path('first_move.png') %>" alt="play_game"></div> -->
       <div class="btn btn-primary" id="previous-move"><img class="touches" src="<%= image_path('backward-arrow.png') %>" alt="play_game"></div>
       <div class="btn btn-primary" id="next-move"><img class="touches" src="<%= image_path('arrow-point-to-right.png') %>" alt="play_game"></div>
-      <div class="btn btn-primary" id="last-move"><img class="touches" src="<%= image_path('fast-forward-button.png') %>" alt="play_game"></div>
+ <!--      <div class="btn btn-primary" id="last-move"><img class="touches" src="<%= image_path('fast-forward-button.png') %>" alt="play_game"></div> -->
     </div>
 
     <div class="col-sm-4">
@@ -56,21 +56,21 @@
         </div>
       </div>
 
-    <div class="btn-group-toggle" data-toggle="buttons">
+<!--     <div class="btn-group-toggle" data-toggle="buttons">
       <% @game.collections.each do |collection| %>
       <label class="btn btn-secondary active">
         <input type="checkbox" checked autocomplete="off"><%= collection.name %>
       </label>
       <% end %>
-    </div>
+    </div> -->
 
 
     <div>
       <ul class="list-inline">
         <% @game.collections.each do |collection| %>
         <li class="list-inline-item">
-          <h4><span class="badge badge-secondary"><%= collection.name %></span>
-          </h4>
+          <h5><span class="badge badge-secondary"><%= collection.name %></span>
+          </h5>
         </li>
         <% end %>
       </ul>
