--- a/app/assets/stylesheets/layouts/_sidebar_games.scss
+++ b/app/assets/stylesheets/layouts/_sidebar_games.scss
@@ -1,11 +1,7 @@
 #sidebar-games {
     min-height: 100vh;
-    background: $brand-info;
-    color: #fff;
+    background: White;
     transition: all 0.3s;
-    padding: 0;
+    padding: 0 10px;
 }
 
-.red {
-  background: red !important;
-}
