--- a/app/assets/stylesheets/components/_collection-cards.scss
+++ b/app/assets/stylesheets/components/_collection-cards.scss
@@ -1,24 +1,31 @@
 .collection-card {
   margin-bottom: 1px;
   padding: 10px;
-  background: #1E5772;
-  color: white;
-  font-size: 14px;
-  font-weight: lighter;
-  box-shadow: 1px 1px #D6E0E5;
-  display:flex;
-  justify-content: space-between;
-}
-.collection-card > a{
-  color: white;
   font-size: 14px;
   font-weight: lighter;
 }
+
 .collection-card:hover {
-  font-style: bold;
+  font-weight: bold;
   font-style: italic;
-  color: white;
-  background-color: #32667E;
+  background-color: #1E5772;
+  color: orange;
 }
+
+.collection-card:hover a {
+  font-weight: bold;
+  color: white;
+  opacity: 0.8;
+}
+
+.collection-card > a {
+  font-size: 14px;
+  font-weight: lighter;
+  color: black;
+}
+
+
+
+
 
 
