--- a/app/assets/stylesheets/components/_game-cards.scss
+++ b/app/assets/stylesheets/components/_game-cards.scss
@@ -1,17 +1,20 @@
 // Games we find in the 2nd sidebar
 .game-card {
-  padding: 5px;
+  padding: 10px;
+  min-height: 60px;
   color: black;
   position: relative;
   border: 1px solid #ABCAD4;
-  box-shadow: 1px 1px 1px 1px rgba(0, 0, 255, 0.2);
-  margin: 10px 0;
-  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  // box-shadow: 1px 1px 1px 1px rgba(0, 0, 255, 0.2);
+  // margin: 10px 0;
+  // border-radius: 5px;
   text-decoration: none;
   &:hover {
-  transform: scale(1.05);
-  // background-color: #3183A8;
-  box-shadow: 3px 3px 1px 1px rgba(0, 0, 255, 0.2);
+  // transform: scale(1.05);
+  background-color: #3183A8;
+  // box-shadow: 3px 3px 1px 1px rgba(0, 0, 255, 0.2);
   // opacity: 0.7;
   }
 }
