--- a/app/assets/stylesheets/layouts/_sidebar_games.scss
+++ b/app/assets/stylesheets/layouts/_sidebar_games.scss
@@ -2,6 +2,7 @@
     min-height: 100vh;
     background: White;
     transition: all 0.3s;
-    padding: 0 10px;
+    padding: 0;
+    border: solid 1px lightgrey;
 }
 
