--- a/app/views/shared/_chess_box.html.erb
+++ b/app/views/shared/_chess_box.html.erb
@@ -41,11 +41,9 @@
     </div>
 
     <div class="chess-moves">
-      <% game.plies.each do |ply| %>
-        <% if ply.status == "main" %>
+      <% game.main_sorted_plies.each do |ply| %>
           <span> <%= ply.display_move_number %></span>
           <span class="moves"> <%= ply.move  %></span>
-        <% end %>
       <% end %>
     </div>
 
@@ -54,80 +52,3 @@
 
 
 
-<!--   <div class="row">
-    <div class="col-sm-12">
-
-      <div class="chess-headers">
-
-        <div class="players">
-          <% if game.white_player.present? && game.black_player.present? %>
-            <div class="white-player" id="white-player">
-              <p>
-                <span><%= game.white_player.fullname %></span>
-                <span>(<%= game.white_player.title %>)</span>
-                <%= link_to edit_player_path(game.white_player) do %>
-                  <i class="fas fa-pencil-alt"></i>
-                <% end %>
-              </p>
-            </div>
-            <div class="black-player" id="black-player">
-              <p>
-                <span><%= game.black_player.fullname %></span>
-                <span>(<%= game.black_player.title %>)</span>
-                <%= link_to edit_player_path(game.black_player) do %>
-                  <i class="fas fa-pencil-alt"></i>
-                <% end %>
-              </p>
-            </div>
-          <% else %>
-            <span> <%= game.name %></span>
-          <% end %>
-        </div>
-
-        <div class="chess-description">
-          <p> <%= game.event %> | <%= game.site %> | <%= game.date %>  <i class="fas fa-pencil-alt"></i>
-          </p>
-        </div>
-
-      </div>
-
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="col-sm-4">
-      <div id="chessgame"></div>
-    </div>
-    <div class="col-sm-4">
-      <div class="chess-moves">
-        <% game.plies.each do |ply| %>
-          <% if ply.status == "main" %>
-            <span> <%= ply.display_move_number %></span>
-            <span class="moves"> <%= ply.move  %></span>
-          <% end %>
-        <% end %>
-      </div>
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="col-sm-12">
-      <div class="game-collections">
-        <ul class="list-inline">
-          <% @game.collections.each do |collection| %>
-          <li class="list-inline-item">
-            <h6><span class="badge badge-secondary"><%= collection.name %></span>
-            </h6>
-          </li>
-          <% end %>
-        </ul>
-      </div>
-      <div class="chess-controls">
-        <div class="btn btn-primary" id="board-toggle"><img class="touches" src="<%= image_path('rotating.png') %>" alt="play_game"></div>
-        <div class="btn btn-primary" id="previous-move"><img class="touches" src="<%= image_path('backward-arrow.png') %>" alt="play_game"></div>
-        <div class="btn btn-primary" id="next-move"><img class="touches" src="<%= image_path('arrow-point-to-right.png') %>" alt="play_game"></div>
-      </div>
-    </div>
-  </div>
-
-</div> -->
