added navigation buttons first and last as well as marker on notation

--- a/app/assets/stylesheets/components/_chess-box.scss
+++ b/app/assets/stylesheets/components/_chess-box.scss
@@ -21,6 +21,11 @@
   width: 100%;
 }
 
+.current-move {
+  background: lightgrey;
+  font-weight: bold;
+}
+
 // i {
 //   color: LightGray;
 //   opacity: 0.6;
