--- a/app/views/shared/_sidebar_collection.html.erb
+++ b/app/views/shared/_sidebar_collection.html.erb
@@ -8,9 +8,9 @@
               <%= link_to filtered_path(collection), remote: true do  %>
                 <%= collection.name %>
               <% end %>
-              <%= link_to edit_collection_path(collection) do %>
+<!--               <%= link_to edit_collection_path(collection) do %>
                 <i class="fas fa-pencil-alt"></i>
-              <% end %>
+              <% end %> -->
             </div>
         <% end %>
   </div>
