--- a/app/assets/stylesheets/components/_game-cards.scss
+++ b/app/assets/stylesheets/components/_game-cards.scss
@@ -4,7 +4,7 @@
   min-height: 60px;
   color: black;
   position: relative;
-  border: 1px solid #ABCAD4;
+  border-top: solid 1px lightgrey;
   display: flex;
   align-items: center;
   // box-shadow: 1px 1px 1px 1px rgba(0, 0, 255, 0.2);
@@ -17,6 +17,10 @@
   // box-shadow: 3px 3px 1px 1px rgba(0, 0, 255, 0.2);
   // opacity: 0.7;
   }
+}
+
+.list-of-games :last-child .game-card {
+  border-bottom: solid 1px lightgrey;
 }
 
 // .game-card-header {
