--- a/app/assets/stylesheets/components/_chess-box.scss
+++ b/app/assets/stylesheets/components/_chess-box.scss
@@ -35,6 +35,17 @@
 //   opacity: 1;
 // }
 
+.empty-collection {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  max-width: 300px;
+  max-height: 95px;
+  text-align: center;
+  margin-left: 290px;
+}
+
 #white-pawn {
   color: rbg(3, 3, 3);
   font-size: 30px
